[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cost"
version = "0.1.0"
description = "Cost analysis and budgeting tool for agent runs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/agent-cost"
Issues = "https://github.com/erron-ai/agent-cost/issues"

[project.scripts]
agent-cost = "agent_cost.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
